--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,13 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.25.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-mock>=3.12.0",
+]
+
+[tool.setuptools]
+py-modules = ["reachy"]
