--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ authors = [
 dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.25.0",
+    # Explicitly avoid yanked numpy versions that can break CI installs.
+    "numpy!=2.4.0",
     "opencv-python-headless>=4.9.0.80",
     "reachy-mini",
 ]
