--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,13 @@ dependencies = [
     # Explicitly avoid yanked numpy versions that can break CI installs.
     "numpy!=2.4.0",
     "opencv-python-headless>=4.9.0.80",
-    "reachy-mini",
 ]
 
 [project.optional-dependencies]
+reachy = [
+    # Full Reachy Mini SDK (may pull heavy platform-specific deps).
+    "reachy-mini",
+]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
